<resources>
    <string name="app_name">BetterOpelApp</string>


    <string name="login_helptext">Diese App nutzt den Dienst Tronity.io als Schnittstelle zu den einzelnen Autoherstellern.\n\n
        Tronity aggregiert auf seiner Website die Fahrzeugdaten, welche von den Schnittstellen der einzelnen Fahrzeuge übermittelt werden und arbeitet diese Daten zu einem einheitlichen Datensatz auf.\n\n\n
        Um diese App zu verwenden, bedarf es einem Konto bei Tronity.io und dein Fahrzeug muss von Tronity unterstützt und dort registiert sein.\n\n
        Zudem muss der Tronity.io Account mit platform.tronity.io verknüpft werden. Im Anschluss benötigst du die \'Client Id\' und das \'Client Secret\' aus dem Tronity Platform Dashboard.</string>

    <string name="login_header">Login mit</string>
    <string name="login_logo_description">Tronity Logo</string>
    <string name="login_link_tronity">Zu Tronity</string>
    <string name="login_link_tronityplatform">Zu Tronity Platform</string>
    <string name="login_api_keys">Client ID / Client Secret</string>
    <string name="login_api_clientID">Client ID einfügen</string>
    <string name="login_api_clientSecret">Client Secret einfügen</string>
    <string name="login_btn_save">Speichern und Anmelden</string>

    <string name="vehicleview_text_battery">Akkustand</string>
    <string name="vehicleview_text_distance">Reichweite</string>
    <string name="vehicleview_text_totaldistance">Kilometer</string>
    <string name="vehicleview_text_consumption">Verbrauch/100km</string>

    <string name="vehicleview_placeholder_battery">-- %</string>
    <string name="vehicleview_placeholder_distance">-- km</string>
    <string name="vehicleview_placeholder_totaldistance">- km</string>
    <string name="vehicleview_placeholder_consumption">-- kWh</string>

    <string name="chargelistview_placeholder_start">--.--.----\n--:--</string>
    <string name="chargelistview_placeholder_end">--.--.----\n--:--</string>
    <string name="chargelistview_placeholder_divider">bis</string>

    <string name="chargelistview_placeholder_time">--:--</string>
    <string name="chargelistview_placeholder_energy">-- kWh</string>
    <string name="chargelistview_placeholder_distance">-- km</string>
    <string name="chargelistview_placeholder_max">-- kW</string>

    <string name="chargelistview_text_time">Dauer</string>
    <string name="chargelistview_text_energy">Geladen</string>
    <string name="chargelistview_text_distance">Reichweite</string>
    <string name="chargelistview_text_max">Max</string>

    <string name="triplistview_placeholder_start">--.--.----\n--:--</string>
    <string name="triplistview_placeholder_end">--.--.----\n--:--</string>
    <string name="triplistview_placeholder_divider">bis</string>

    <string name="triplistview_placeholder_distance">-- km</string>
    <string name="triplistview_placeholder_consumption">-- kWh</string>
    <string name="triplistview_placeholder_temperature">-- *C</string>
    <string name="triplistview_placeholder_totalconsumption">-- kW</string>

    <string name="triplistview_text_distance">Strecke</string>
    <string name="triplistview_text_consumption">Ø Verbrauch</string>
    <string name="triplistview_text_temperature">Ø Temp.</string>
    <string name="triplistview_text_totalconsumption">Gesamtstrom</string>

    <string name="listview_header_trips">Aktuelle Fahrten</string>
    <string name="listview_header_charges">Aktuelle Ladevorgänge</string>

</resources>